--- a/Highlights.tex
+++ b/Highlights.tex
@@ -2,15 +2,15 @@
 
 \begin{document}
 \begin{enumerate}
-\item A novel idea of using SEA (Stirling engine array) to overcome the limitation of small engine capacity in dish-Stirling system was proposed.
+\item A novel idea of to overcome the drawbacks of dish-Stirling system was proposed.
 
-\item Five basic connection types of SEA were summarized.
+\item Five basic connection types of Stirling engine array were summarized.
 
-\item A Stirling engine model considering various irreversible phenomena was developed and validated.
+\item A new Stirling engine model was developed and validated.
 
-\item Influence of flow type and flow order on the performance of SEA was investigated.
+\item Influence of flow type and flow order on the performance was investigated.
 
-\item It was found that the flow order has little influence on the SEA performance.
+\item It was found that the flow order has little influence on the performance.
 \end{enumerate}
 
 \end{document}
